name:                sitemap
version:             0.1.0.0
synopsis:            Parser for sitemap.xml
description:         Please see README.md
homepage:            http://github.com/alphaHeavy/sitemap#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Severance
maintainer:          sseverance@alphaheavy.com
copyright:           2016 Alpha Heavy Industries
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Web.Sitemap
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    conduit,
    exceptions,
    google-url,
    text,
    time,
    xml-conduit,
    xml-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alphaHeavy/sitemap
